--- a/About us.html
+++ b/About us.html
@@ -433,29 +433,41 @@ nav {
     </style>
 </head>
 <body>
+     <!-- Top Bar Section -->
     <div class="top-bar">
-        <img src="images/call.png" alt="Phone Icon" class="phone-icon"> <!-- Replace with an actual icon -->
+        <img src="images/call.png" alt="Phone Icon" class="phone-icon">
         <span>Call Us: <a href="tel:+442032893891">+44 203 289 3891</a></span>
     </div>
-     <header>
-    <nav>
-        <div class="logo">
-            <img src="images/logo (2).png" alt="Company Logo">
-        </div>
-        <div class="hamburger" id="hamburger">
-            &#9776; <!-- Hamburger icon -->
-        </div>
-        <ul class="nav-links" id="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="About us.html">About Us</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="Sample.html">Samples</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="order.html">Order</a></li>
-        </ul>
-    </nav>
-</header>
 
+    <!-- Header Section -->
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="images/logo (2).png" alt="Company Logo">
+            </div>
+            <div class="hamburger" id="hamburger">
+                &#9776;
+            </div>
+            <ul class="nav-links" id="nav-links-desktop">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About us.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="Sample.html">Samples</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="order.html">Order</a></li>
+            </ul>
+            <ul class="nav-links-mobile" id="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About us.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="Sample.html">Samples</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="order.html">Order</a></li>
+                <br>
+                <button class="close-menu" id="close-menu">X</button>
+            </ul>
+        </nav>
+    </header>
     <main>
         <br><br>
         <section class="about-hero">
