--- a/About us.html
+++ b/About us.html
@@ -196,6 +196,19 @@
             transform: scale(1.05);
         }
 
+          .hamburger {
+                display: block;
+            }
+
+            .nav-links {
+                display: none;
+            }
+
+            .nav-links-mobile {
+                padding: 1rem;
+            }
+
+
        
         
 
