--- a/About us.html
+++ b/About us.html
@@ -599,15 +599,43 @@ nav {
     <a href="https://api.whatsapp.com/send/?phone=442032893891&text&type=phone_number&app_absent=0" class="whatsapp-float">
         <img src="images/whatsapp-removebg-preview.png" class="whatsapp-icon">
     </a>
-     <footer>
+     <!-- Footer -->
+    <footer class="footer">
         <div class="footer-content">
-            <p>Contact Us: <a href="mailto:info@example.com">inscribe@gmail.com</a></p>
-            
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2011 The Inscribeco. All rights reserved.</p>
+            <div class="footer-logo">
+                <img src="images/logo (2).png" alt=" Logo" />
+            </div>
+            <div class="footer-info">
+                <h2>Inscribe.co</h2>
+                <p>Inscribe.co offers a range of professional writing services designed to help you excel in your academic and professional endeavors. Whether you need assistance with essays, dissertations, or business writing, our expert team is here to support you. We also provide proofreading, editing, and formatting services to ensure your documents are polished and effective. Contact us today for a free consultation and discover how we can help you achieve your writing goals.</p>
+            </div>
+            <div class="footer-links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <br>
+                    <li><a href="About-us.html">About Us</a></li>
+                    <br>
+                    <li><a href="order.html">Order</a></li>
+                    <br>
+                    <li><a href="pricing.html">Pricing</a></li>
+                 
+                    <br>
+                    <li><a href="sample.html">sample</a></li>
+                       <br>
+                    <li><a href="services.html">services</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h3>Quick Info</h3>
+                <p>INCRIBE@gmail.com</p>
+                <p>+44 2032893891</p>
+                <p>facebook.com</p>
+                <p>insta.com</p>
+            </div>
         </div>
     </footer>
+
     <script>
                // Hamburger Menu Functionality
         document.addEventListener('DOMContentLoaded', function () {
