--- a/About us.html
+++ b/About us.html
@@ -313,10 +313,13 @@
             max-width: 1200px;
             margin: auto;
             transition: all 0.3s ease;
+            opacity: 0;
+            transform: translateX(100%);
         }
 
         .section:nth-child(even) {
             flex-direction: row-reverse;
+            transform: translateX(-100%);
         }
 
         .text,
@@ -340,13 +343,13 @@
             text-align: justify;
         }
 
-
         .image-left {
             display: flex;
             justify-content: flex-end;
         }
 
-        .image-left img {
+        .image-left img,
+        .image-right img {
             max-width: 100%;
             height: 300px;
             object-fit: cover;
@@ -355,24 +358,10 @@
             transition: transform 0.3s ease;
         }
 
-
-
-
-
-.image-right img {
-            max-width: 100%;
-            height: 300px;
-            object-fit: cover;
-            border-radius: 12px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .image-right img:hover {
+        .image-right img:hover,
+        .image-left img:hover {
             transform: scale(1.05);
         }
-
-        
 
         /* WhatsApp Button */
         .whatsapp-float {
@@ -447,6 +436,14 @@
                 text-align: center;
                 margin: 20px 0;
             }
+
+            .section {
+                flex-direction: column;
+            }
+
+            .image {
+                padding: 20px;
+            }
         }
     </style>
 </head>
@@ -497,7 +494,7 @@
         </section>
 
         <!-- First Section -->
-        <section class="section">
+        <section class="section" id="section1">
             <div class="text">
                 <h2>Our Mission</h2>
                 <p>We strive to provide outstanding academic and professional writing services to assist our clients in achieving their educational and career goals. Our mission is rooted in a commitment to excellence, ensuring that every piece of work we produce is of the highest quality. We believe in fostering a strong partnership with our clients, working closely with them to understand their unique needs and requirements. By leveraging our expertise, we aim to provide personalized and impactful solutions that drive success, growth, and fulfillment in both academic and professional settings.</p>
@@ -508,7 +505,7 @@
         </section>
 
         <!-- Second Section -->
-        <section class="section">
+        <section class="section" id="section2">
             <div class="text">
                 <h2>Our Vision</h2>
                 <p>We aim to be the leading provider of high-quality writing services, helping individuals and organizations excel in their respective fields. Our vision is to empower clients with the tools and resources they need to succeed, regardless of the challenges they face. By staying ahead of industry trends and continuously improving our services, we aspire to set new standards for excellence in the writing and content development industry. We envision a future where every student, professional, and business can access the support they need to realize their full potential.</p>
@@ -519,7 +516,7 @@
         </section>
 
         <!-- Third Section -->
-        <section class="section">
+        <section class="section" id="section3">
             <div class="text">
                 <h2>Our Values</h2>
                 <p>Integrity, excellence, and dedication are the core values that guide our operations and service delivery. We are committed to maintaining the highest standards of honesty and professionalism in every interaction. Our team believes in the importance of delivering value through our work, ensuring that our clients receive the best possible service at every step. We are dedicated to continuous learning, growth, and development, both individually and collectively, to better serve our clients and make a meaningful difference in their academic and professional journeys.</p>
@@ -530,7 +527,7 @@
         </section>
 
         <!-- Fourth Section -->
-        <section class="section">
+        <section class="section" id="section4">
             <div class="text">
                 <h2>Our Team</h2>
                 <p>Our team consists of experienced writers, editors, and support staff who are committed to delivering the best possible results. Each member of our team brings a unique set of skills and expertise to the table, allowing us to provide comprehensive and specialized support to our clients. We value collaboration, innovation, and a shared commitment to excellence, which drives us to continually enhance the quality of our services. Our team members are not just professionals; they are passionate individuals who genuinely care about the success and satisfaction of our clients.</p>
@@ -619,6 +616,21 @@
                     if (navLinks.classList.contains('show')) {
                         closeMenu(event);
                     }
+                }
+            });
+        });
+
+        // Section Animation for Transition Effect
+        window.addEventListener('scroll', function () {
+            const sections = document.querySelectorAll('.section');
+            const triggerHeight = window.innerHeight * 0.75;
+
+            sections.forEach(section => {
+                const sectionTop = section.getBoundingClientRect().top;
+
+                if (sectionTop < triggerHeight) {
+                    section.style.opacity = '1';
+                    section.style.transform = 'translateX(0)';
                 }
             });
         });
