--- a/About us.html
+++ b/About us.html
@@ -437,12 +437,19 @@
                 margin: 20px 0;
             }
 
-            .section {
+                 .section {
                 flex-direction: column;
+                padding: 20px;
             }
 
             .image {
-                padding: 20px;
+                padding: 10px;
+                text-align: center;
+            }
+
+            .text {
+                padding: 10px;
+                text-align: center;
             }
         }
     </style>
