--- a/About us.html
+++ b/About us.html
@@ -442,7 +442,7 @@
                 padding: 20px;
             }
 
-            .image {
+            .image-left,.image-right {
                 padding: 10px;
                 text-align: center;
             }
