--- a/About us.html
+++ b/About us.html
@@ -406,13 +406,29 @@
                 display: block;
             }
 
-            .nav-links {
-                display: none;
-            }
+            .section {
+        flex-direction: column;
+        padding: 20px;
+        text-align: center;
+    }
 
-            .nav-links-mobile {
-                padding: 1rem;
-            }
+    .text {
+        padding: 10px;
+    }
+
+    .image-left,
+    .image-right {
+        padding: 10px;
+        text-align: center;
+    }
+
+    .image-left img,
+    .image-right img {
+        width: 90%;
+        max-width: 400px;
+        height: auto;
+        margin: 0 auto;
+    }
 
             .about-hero h1 {
                 font-size: 2rem;
