--- a/About us.html
+++ b/About us.html
@@ -452,19 +452,29 @@
             }
 
                  .section {
-                flex-direction: column;
-                padding: 20px;
-            }
+        flex-direction: column;
+        padding: 20px;
+        text-align: center;
+    }
 
-            .image-left,.image-right {
-                padding: 10px;
-                text-align: center;
-            }
+    .text {
+        padding: 10px;
+    }
 
-            .text {
-                padding: 10px;
-                text-align: center;
-            }
+    .image-left,
+    .image-right {
+        padding: 10px;
+        text-align: center;
+    }
+
+    .image-left img,
+    .image-right img {
+        width: 90%;
+        max-width: 400px;
+        height: auto;
+        margin: 0 auto;
+    }
+
         }
     </style>
 </head>
