--- a/About us.html
+++ b/About us.html
@@ -402,9 +402,18 @@
         }
 
         @media (max-width: 768px) {
-            .hamburger {
+               .hamburger {
                 display: block;
             }
+
+            .nav-links {
+                display: none;
+            }
+
+            .nav-links-mobile {
+                padding: 1rem;
+            }
+
 
             .section {
         flex-direction: column;
