--- a/About us.html
+++ b/About us.html
@@ -414,11 +414,13 @@
                 padding: 1rem;
             }
 
-
-            .section {
+              /* Updated Section Styles */
+    .section {
         flex-direction: column;
         padding: 20px;
         text-align: center;
+        opacity: 1;
+        transform: translateX(0);
     }
 
     .text {
@@ -438,6 +440,10 @@
         height: auto;
         margin: 0 auto;
     }
+
+
+         
+    
 
             .about-hero h1 {
                 font-size: 2rem;
