--- a/About us.html
+++ b/About us.html
@@ -180,23 +180,14 @@
 
 
         /* Close Menu Button Styles */
+        /* Close Menu Button Styles */
         .close-menu {
-            z-index: 3001;
+            z-index: 3005;
             position: absolute;
             top: 20px;
             right: 20px;
-            font-size: 1.5rem;
-            background-color: #ff4d4d;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
         }
 
-        .close-menu:hover {
-            background-color: #ff1a1a;
-        }
 
         /* Footer Section */
         .footer {
