--- a/order.html
+++ b/order.html
@@ -297,7 +297,7 @@
 
         .form-section {
             padding: 4rem 1rem;
-            background-color: black;
+            background-color: white;
             text-align: center;
             width: 100%;
             color: white;
