--- a/pricing.html
+++ b/pricing.html
@@ -1,1 +1,296 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The InscribeCo - Home</title>
+    <style>
+        /* General Styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.8;
+            background-color: #f5f5f5;
+            overflow-x: hidden;
+        }
+
+        /* Header Styles */
+        header {
+            background-color: rgba(255, 255, 255, 0.3);
+            color: black;
+            width: 100%;
+            position: fixed;
+            top: 0;
+            z-index: 1500;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(50px);
+            transition: all 0.3s ease;
+        }
+
+        .top-bar {
+            background-color: lightgrey;
+            color: black;
+            padding: 10px 0;
+            text-align: center;
+            font-family: 'Arial', sans-serif;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1600;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        }
+
+        .phone-icon {
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+        }
+
+        .top-bar a {
+            color: black;
+            text-decoration: none;
+        }
+
+        .top-bar a:hover {
+            text-decoration: underline;
+        }
+
+        header {
+            margin-top: 40px;
+        }
+
+        /* Hamburger Menu Styles */
+        .hamburger {
+            display: none;
+            cursor: pointer;
+            font-size: 2rem;
+            user-select: none;
+            transition: transform 0.3s ease;
+            z-index: 2001;
+            position: relative;
+        }
+
+        .hamburger.open {
+            transform: rotate(90deg);
+        }
+
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem;
+            max-width: 1400px;
+            margin: auto;
+            background-color: transparent;
+            backdrop-filter: none;
+            box-shadow: none;
+            position: relative;
+            z-index: 1500;
+            transition: all 0.3s ease;
+        }
+
+        .logo img {
+            height: 50px;
+            border-radius: 50%;
+            border: 3px solid #008080;
+            padding: 5px;
+            background-color: rgba(245, 245, 245, 0.863);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .logo img:hover {
+            transform: scale(1.1);
+        }
+
+        /* Navigation Links Styles */
+        .nav-links {
+            display: flex;
+            list-style: none;
+        }
+
+        .nav-links a {
+            font-size: 16px;
+            padding: 1rem;
+            text-align: center;
+            color: black;
+            text-decoration: none;
+            position: relative;
+            transition: color 0.3s ease, transform 0.3s ease;
+            box-sizing: border-box;
+            font-weight: bold;
+            border-radius: 8px;
+        }
+
+         .nav-links a:hover {
+            color: #1f6396;
+            transform: scale(1.05);
+        }
+
+        .nav-links-mobile {
+            display: none;
+            z-index: 3000;
+            position: fixed;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background-color: rgba(44, 62, 80, 0.9);
+            height: 100vh;
+            overflow: hidden;
+            flex-direction: column;
+            padding: 2rem;
+        }
+
+        .nav-links-mobile.show {
+            display: flex;
+        }
+
+        .nav-links-mobile li {
+            display: block;
+            margin: 30px 0;
+            border-bottom: 1px solid #ffffff;
+            padding-bottom: 10px;
+            width: 100%;
+        }
+
+        .nav-links-mobile a {
+            font-size: 14.5px;
+            padding: 1rem;
+            text-align: center;
+            color: #ffffff;
+            text-decoration: none;
+            position: relative;
+            transition: color 0.3s ease, transform 0.3s ease;
+            width: 100%;
+            box-sizing: border-box;
+            font-weight: bold;
+        }
+
+
+          .nav-links-mobile a:hover {
+            color: #1f6396;
+            transform: scale(1.05);
+        }
+
+
+        /* Close Menu Button Styles */
+        /* Close Menu Button Styles */
+        .close-menu {
+            z-index: 3005;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+        }
+
+
+        /* Footer Section */
+        .footer {
+            background-color: #003366;
+            color: white;
+            padding: 40px 20px;
+            width: 100%;
+            box-sizing: border-box;
+            text-align: center;
+            border-top: 5px solid #008080;
+        }
+
+        .footer-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            flex-wrap: wrap;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .footer-logo {
+            margin-right: 20px;
+        }
+
+        .footer-logo img {
+            height: 50px;
+            width: auto;
+        }
+
+        .footer-info,
+        .footer-links,
+        .footer-contact {
+            flex: 1;
+            min-width: 200px;
+            margin: 10px;
+            text-align: left;
+        }
+
+        .footer-info h2 {
+            font-size: 1.8em;
+            margin-bottom: 10px;
+            color: #00bfff;
+        }
+
+        .footer-links ul,
+        .footer-services ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .footer-links li,
+        .footer-services li {
+            margin: 5px 0;
+        }
+
+        .footer-links a,
+        .footer-services a {
+            color: #00bfff;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        .footer-links a:hover,
+        .footer-services a:hover {
+            color: #ffffff;
+        }
+
+        .footer-bottom {
+            margin-top: 20px;
+            text-align: center;
+            font-size: 0.8em;
+        }
+
+        .about-hero {
+            border-radius: 20px;
+            height: 70vh;
+            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('images/bg-DESKTOP-RI8354E.jpg') no-repeat center center/cover;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 0 2rem;
+            margin-top: 0;
+            transition: all 0.3s ease;
+        }
+
+        .about-hero-content {
+            animation: fadeIn 2s ease-out;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        .about-hero h1 {
+            font-size: 3rem;
+            color: #00bfff;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+        }
+
+        .about-hero p {
+            font-size: 1.5rem;
+            color: #e0e0e0;
+        }
 
