--- a/pricing.html
+++ b/pricing.html
@@ -558,11 +558,11 @@
         <br><br>
         <section class="about-hero">
             <div class="about-hero-content">
-                <h1>About Us</h1>
+                <h1>Our Pricing</h1>
                 <p>We are dedicated to providing top-notch <br> academic writing services to help you succeed.</p>
             </div>
         </section>
-
+<br> <br>
          <!-- Navigation Buttons -->
     <div class="nav-buttons">
         <button class="nav-button" onclick="showContainer('normal')">Normal</button>
@@ -689,7 +689,7 @@
             <a href="#" class="button">Order Now</a>
         </div>
     </div>
-
+<br> <br> <br>
     
     </main>
 
