--- a/pricing.html
+++ b/pricing.html
@@ -265,7 +265,7 @@
         .about-hero {
             border-radius: 20px;
             height: 70vh;
-            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('images/bg-DESKTOP-RI8354E.jpg') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('images/pricing.jpeg') no-repeat center center/cover;
             color: white;
             display: flex;
             justify-content: center;
