--- a/index.html
+++ b/index.html
@@ -726,8 +726,12 @@
         }
 
         .footer-logo {
-    margin-right: 20px;
-    text-align: center; /* Centering logo and paragraph */
+    height: 50px;
+            border-radius: 50%;
+            border: 3px solid #008080;
+            padding: 5px;
+            background-color: rgba(245, 245, 245, 0.863);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .footer-logo img {
