--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
         }
 
         .footer-logo {
-    height: 50px;
+            height: 30px;
             border-radius: 50%;
             border: 3px solid #008080;
             padding: 5px;
@@ -957,8 +957,10 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo (2).png" alt="Company Logo">
-            </div>
+    <a href="index.html">
+        <img src="images/logo (2).png" alt="Company Logo">
+    </a>
+</div>
             <div class="hamburger" id="hamburger">
                 &#9776;
             </div>
@@ -1054,7 +1056,7 @@
                             <br>
                             <li><strong>Urgent:</strong> £10 per slide, AED 55 per slide, $15 per slide</li>
                             <br>
-                             <li><strong>Urgent:</strong> £15 per slide, AED 71 per slide, $19 per slide</li>
+                             <li><strong>Super Urgent:</strong> £15 per slide, AED 71 per slide, $19 per slide</li>
                             
                         </ul>
                     </div>
