--- a/index.html
+++ b/index.html
@@ -1179,9 +1179,11 @@
 <footer class="footer">
     <div class="footer-content">
         <div class="footer-logo">
+            <a href="index.html">
             <img src="images/logo (2).png" alt="Logo" />
             <p class="footer-paragraph">Inscribe.co offers a range of professional writing services designed to help you excel in your academic and professional endeavors. Whether you need assistance with essays, dissertations, or business writing, our expert team is here to support you. We also provide proofreading, editing, and formatting services to ensure your documents are polished and effective. Contact us today for a free consultation and discover how we can help you achieve your writing goals.</p>
         </div>
+        
         <div class="footer-links">
             <h3>Quick Links</h3>
             <ul>
