--- a/index.html
+++ b/index.html
@@ -102,13 +102,15 @@
             z-index: 1500;
         }
 
-        .logo img {
+    
+           .logo img {
             height: 50px;
             border-radius: 50%;
             border: 3px solid #008080;
             padding: 5px;
             background-color: rgba(245, 245, 245, 0.863);
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
         }
 
         /* Navigation Links Styles */
