--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
     .top-bar {
         flex-direction: column; /* Stack items vertically */
         padding: 10px 0; /* Adjust padding */
-        height: auto; /* Auto height to fit content */
+        height: 10px; /* Auto height to fit content */
     }
     .top-bar span {
         margin-bottom: 10px; /* Space between items */
@@ -1203,11 +1203,11 @@
 
         @media (max-width: 768px) {
     .hero-box {
-        max-width: 90%; /* Reduce max width */
+        max-width: 70%; /* Reduce max width */
         padding: 1rem; /* Reduce padding */
     }
     .hero-box h1 {
-        font-size: 2rem; /* Reduce font size */
+        font-size: 1.5rem; /* Reduce font size */
     }
     .hero-box p {
         font-size: 1rem; /* Reduce font size */
@@ -1217,11 +1217,11 @@
 
         @media (max-width: 768px) {
     .logo-slider {
-        margin: 20px 0; /* Add some vertical margin */
+        margin: 30px 0; /* Add some vertical margin */
     }
     .logo {
-        width: 25%; /* Increase size for visibility */
-        padding: 25px; /* Add padding around logos */
+        width: 50%; /* Increase size for visibility */
+        padding: 50px; /* Add padding around logos */
     }
 }
 
