--- a/index.html
+++ b/index.html
@@ -1191,6 +1191,7 @@
         flex-direction: column; /* Stack items vertically */
         padding: 10px 0; /* Adjust padding */
         height: 10px; /* Auto height to fit content */
+         font-size: 0.5rem; 
     }
     .top-bar span {
         margin-bottom: 10px; /* Space between items */
@@ -1203,14 +1204,14 @@
 
         @media (max-width: 768px) {
     .hero-box {
-        max-width: 70%; /* Reduce max width */
+        max-width: 40%; /* Reduce max width */
         padding: 1rem; /* Reduce padding */
     }
     .hero-box h1 {
         font-size: 1.5rem; /* Reduce font size */
     }
     .hero-box p {
-        font-size: 1rem; /* Reduce font size */
+        font-size: 0.5rem; /* Reduce font size */
     }
 }
 
@@ -1220,8 +1221,8 @@
         margin: 30px 0; /* Add some vertical margin */
     }
     .logo {
-        width: 50%; /* Increase size for visibility */
-        padding: 50px; /* Add padding around logos */
+        width: 250%; /* Increase size for visibility */
+        padding: 250px; /* Add padding around logos */
     }
 }
 
@@ -1239,7 +1240,7 @@
 <!-- Top Bar Section -->
 <div class="top-bar" style="display: flex; justify-content: space-between; align-items: center; padding: 0 10px; height: 60px;">
     <div style="display: flex; justify-content: center; align-items: center; width: 100%;">
-        <span style="margin-right: 40px;"><img src="images/call.png" alt="Phone Icon" class="phone-icon">+44 203 289 3891</span>
+        <span style="margin-right: 40px;"><img src="images/call.png" alt="Phone Icon" class="phone-icon"><a href="+44 203 289 3891">+44 203 289 3891</span>
         <span><img src="images/mail-removebg-preview.png" alt="Email Icon" class="phone-icon"><a href="mailto:theinscribeco@gmail.com">theinscribeco@gmail.com</a></span>
     </div>
 </div>
