--- a/About us.html
+++ b/About us.html
@@ -636,6 +636,7 @@
                 <li><a href="Sample.html">Samples</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="order.html">Order</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
             </ul>
             <ul class="nav-links-mobile" id="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -644,6 +645,7 @@
                 <li><a href="Sample.html">Samples</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="order.html">Order</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
                 <br>
                 <button class="close-menu" id="close-menu">X</button>
             </ul>
