--- a/contactus.html
+++ b/contactus.html
@@ -509,6 +509,7 @@
                 <li><a href="Sample.html">Samples</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="order.html">Order</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
             </ul>
             <ul class="nav-links-mobile" id="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -517,6 +518,7 @@
                 <li><a href="Sample.html">Samples</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="order.html">Order</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
                 <br>
                 <button class="close-menu" id="close-menu">X</button>
             </ul>
@@ -598,6 +600,7 @@
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="sample.html">Sample</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
             </ul>
         </div>
 
