--- a/index.html
+++ b/index.html
@@ -1683,6 +1683,7 @@
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="sample.html">Sample</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
             </ul>
         </div>
 
