--- a/pricing.html
+++ b/pricing.html
@@ -541,6 +541,7 @@
                 <li><a href="Sample.html">Samples</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="order.html">Order</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
             </ul>
             <ul class="nav-links-mobile" id="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -549,6 +550,7 @@
                 <li><a href="Sample.html">Samples</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="order.html">Order</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
                 <br>
                 <button class="close-menu" id="close-menu">X</button>
             </ul>
@@ -719,8 +721,10 @@
                     <li><a href="pricing.html">Pricing</a></li>
                     <br>
                     <li><a href="sample.html">Sample</a></li>
-                    <br>
+                  
                     <li><a href="services.html">Services</a></li>
+                    
+                    <li><a href="contactus.html">Contact us</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
