--- a/About us.html
+++ b/About us.html
@@ -738,6 +738,7 @@
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="sample.html">Sample</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
             </ul>
         </div>
 
