--- a/Sample.html
+++ b/Sample.html
@@ -605,6 +605,7 @@
                     <li><a href="sample.html">Sample</a></li>
                     <br>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="contactus.html">Contact us</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
