--- a/contactus.html
+++ b/contactus.html
@@ -313,7 +313,7 @@
         .about-hero {
             border-radius: 20px;
             height: 70vh;
-            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('images/order.jpg') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('images/contactus.jpg') no-repeat center center/cover;
             color: white;
             display: flex;
             justify-content: center;
@@ -528,7 +528,7 @@
         <br><br>
         <section class="about-hero">
             <div class="about-hero-content">
-                <h1>Contact us r</h1>
+                <h1>Contact Us </h1>
                 <p>We are here to help you!</p>
             </div>
         </section>
@@ -537,7 +537,7 @@
       
       
         <!-- Contact Us Form -->
-<section class="form-section" id="contact-us-section">
+
     <h2>Contact Us</h2>
     <div class="form-container">
         <form id="contact-us-form">
@@ -564,7 +564,7 @@
             <button type="button" class="order-button" onclick="showOrderDetails()">Submit</button>
         </form>
     </div>
-</section>
+
 
 
         <a href="https://api.whatsapp.com/send/?phone=442032893891&text&type=phone_number&app_absent=0" class="whatsapp-float">
