--- a/contactus.html
+++ b/contactus.html
@@ -537,7 +537,7 @@
       
       
         <!-- Contact Us Form -->
-
+<section></section>
     <h2>Contact Us</h2>
     <div class="form-container">
         <form id="contact-us-form">
@@ -564,6 +564,7 @@
             <button type="button" class="order-button" onclick="showOrderDetails()">Submit</button>
         </form>
     </div>
+        </section>
 
 
 
