--- a/Sample.html
+++ b/Sample.html
@@ -569,7 +569,7 @@
             <div class="card-container">
                 <div class="card">
                     <div class="card-inner">
-                        <div class="card-front" style="background-image: url('images/med.png');">
+                        <div class="card-front" style="background-image: url('images/medical.png');">
                             <div class="card-icon" style="color: black;">&#9877;</div>
                             <div class="card-title">Medical</div>
                         </div>
