--- a/Sample.html
+++ b/Sample.html
@@ -302,13 +302,11 @@
         font-size: 14px;
         color: #bbb;
     }
-  
 
- 
-        .about-hero {
+         .about-hero {
             border-radius: 20px;
             height: 70vh;
-            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('images/bg.jpg') center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('images/bg-DESKTOP-RI8354E.jpg') no-repeat center center/cover;
             color: white;
             display: flex;
             justify-content: center;
@@ -317,7 +315,6 @@
             padding: 0 2rem;
             margin-top: 0;
             transition: all 0.3s ease;
-            background-repeat: no-repeat;
         }
 
         .about-hero-content {
@@ -338,6 +335,10 @@
             color: #e0e0e0;
         }
 
+  
+
+ 
+    
         /* WhatsApp Button */
         .whatsapp-float {
             position: fixed;
@@ -559,7 +560,7 @@
         <section class="about-hero">
             <div class="about-hero-content">
                 <h1>Our Sample</h1>
-                <p>We are committed to elevating your academic success through our exemplary writing samples. <br> Each sample showcases our expertise and dedication to delivering superior academic content across various disciplines.</p>
+                <p>We are committed to elevating your academic success through our exemplary writing samples.</p>
 
             </div>
         </section>
