--- a/index.html
+++ b/index.html
@@ -1174,6 +1174,9 @@
             .footer-paragraph {
                 margin: 20px 0;
             }
+         .footer-logo {
+        align-items: center;
+    }
         }
 
         @media (max-width: 480px) {
