--- a/About us.html
+++ b/About us.html
@@ -543,6 +543,10 @@
                 text-align: center;
                 margin: 20px 0;
             }
+            .footer-logo {
+        display: block;
+        margin: 0 auto;
+    }
 
 
 
