--- a/pricing.html
+++ b/pricing.html
@@ -430,7 +430,7 @@
             transform: translateY(0);
         }
         .card {
-            background-color: #f0f9ff;
+            background-color: teal;
             width: 320px;
             border-radius: 15px;
             box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
@@ -449,7 +449,7 @@
         }
         .card h1 {
             font-size: 22px;
-            color: #0073e6;
+            color: teal;
             margin-bottom: 15px;
             font-weight: 600;
         }
@@ -477,13 +477,13 @@
             font-family: 'Roboto', sans-serif;
         }
         .card ul li {
-            color: #0073e6;
+            color: teal;
             margin-bottom: 8px;
             font-weight: 500;
         }
         .card ul li::before {
             content: "•";
-            color: #0073e6;
+            color: teal;
             margin-right: 8px;
         }
         .button {
@@ -522,7 +522,7 @@
                 align-items: center;
             }
             .card {
-                width: 90%;
+                width: 70%;
                 max-width: 400px;
                 margin-bottom: 20px;
             }}
