--- a/pricing.html
+++ b/pricing.html
@@ -398,7 +398,7 @@
             flex-wrap: wrap;
         }
         .nav-button {
-            background-color: #0053a6;
+            background-color: teal;
             color: white;
             padding: 15px 25px;
             border: none;
@@ -410,7 +410,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 255, 0.5);
         }
         .nav-button:hover {
-            background-color: #003d7f;
+            background-color: teal;
             box-shadow: 0 0 20px rgba(0, 0, 255, 0.8);
             transform: scale(1.05);
         }
