--- a/pricing.html
+++ b/pricing.html
@@ -430,7 +430,7 @@
             transform: translateY(0);
         }
         .card {
-            background-color: teal;
+            background-color: white;
             width: 320px;
             border-radius: 15px;
             box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
