--- a/contactus.html
+++ b/contactus.html
@@ -425,7 +425,7 @@
         }
 
         .order-button {
-            background-color: #0044cc;
+            background-color: teal;
             color: white;
             border: none;
             padding: 1rem 2rem;
