--- a/contactus.html
+++ b/contactus.html
@@ -424,7 +424,7 @@
             max-width: 100%; /* Prevent input fields from exceeding container */
         }
 
-        .order-button {
+        .contact-button {
             background-color: teal;
             color: white;
             border: none;
