--- a/About us.html
+++ b/About us.html
@@ -366,80 +366,64 @@
 /* Disable transitions on mobile for better performance */
 
 /* Section Styles */
-.section {
-    display: flex;
-    padding: 50px;
-    align-items: center;
-    max-width: 1200px;
-    margin: auto;
-    transition: all 0.3s ease;
-    /* Removed opacity and transform to ensure visibility by default */
-}
 
-.section:nth-child(even) {
-    flex-direction: row-reverse;
-}
+   /* Section Styles */
+        .section {
+            display: flex;
+            padding: 50px;
+            align-items: center;
+            max-width: 1200px;
+            margin: auto;
+            transition: all 0.3s ease;
+            opacity: 0;
+            transform: translateX(100%);
+        }
 
-.text,
-.image {
-    flex: 1;
-    padding: 40px;
-}
+        .section:nth-child(even) {
+            flex-direction: row-reverse;
+            transform: translateX(-100%);
+        }
 
-.text h2 {
-    font-size: 2rem;
-    color: #008080;
-    margin-bottom: 15px;
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
-}
+        .text,
+        .image {
+            flex: 1;
+            padding: 40px;
+        }
 
-.text p {
-    font-size: 1.1rem;
-    color: #333;
-    line-height: 1.8;
-    text-align: justify;
-}
+        .text h2 {
+            font-size: 2rem;
+            color: #008080;
+            margin-bottom: 15px;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
+        }
 
-.image-left,
-.image-right {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 40px;
-}
+        .text p {
+            font-size: 1.1rem;
+            color: #333;
+            line-height: 1.8;
+            text-align: justify;
+        }
 
-.image-left img,
-.image-right img {
-    max-width: 100%;
-    height: auto; /* Ensures images scale properly */
-    object-fit: cover;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-}
+        .image-left {
+            display: flex;
+            justify-content: flex-end;
+        }
 
-.image-right img:hover,
-.image-left img:hover {
-    transform: scale(1.05);
-}
+        .image-left img,
+        .image-right img {
+            max-width: 100%;
+            height: 300px;
+            object-fit: cover;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
 
-/* Animation Classes (Optional) */
-.section.animate-left {
-    opacity: 0;
-    transform: translateX(-100%);
-}
-
-.section.animate-right {
-    opacity: 0;
-    transform: translateX(100%);
-}
-
-.section.visible {
-    opacity: 1;
-    transform: translateX(0);
-}
-
+        .image-right img:hover,
+        .image-left img:hover {
+            transform: scale(1.05);
+        }
        
 
         /* WhatsApp Button */
@@ -536,6 +520,62 @@
     .section {
         transition: none;
     }
+
+
+            /* Section 1: Our Mission */
+#section1 .text {
+    padding: 15px;
+}
+
+#section1 .text h2 {
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+}
+
+#section1 .text p {
+    font-size: 1rem;
+    line-height: 1.5;
+    text-align: left; /* Left-align for better readability */
+}
+
+#section1 .image-right {
+    margin-top: 20px;
+}
+
+#section1 .image-right img {
+    width: 100%;
+    max-width: 350px;
+    height: auto;
+    border-radius: 8px;
+}
+
+/* Section 2: Our Vision */
+#section2 .text {
+    padding: 15px;
+}
+
+#section2 .text h2 {
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+}
+
+#section2 .text p {
+    font-size: 1rem;
+    line-height: 1.5;
+    text-align: left; /* Left-align for better readability */
+}
+
+#section2 .image-left {
+    margin-top: 20px;
+}
+
+#section2 .image-left img {
+    width: 100%;
+    max-width: 350px;
+    height: auto;
+    border-radius: 8px;
+}
+Explanation of Changes:
 
     /* Adjust Hero Section */
     .about-hero h1 {
@@ -634,49 +674,53 @@
             </div>
         </section>
 
-        <!-- First Section -->
-        <section class="section" id="section1">
-            <div class="text">
-                <h2>Our Mission</h2>
-                <p>We strive to provide outstanding academic and professional writing services to assist our clients in achieving their educational and career goals. Our mission is rooted in a commitment to excellence, ensuring that every piece of work we produce is of the highest quality. We believe in fostering a strong partnership with our clients, working closely with them to understand their unique needs and requirements. By leveraging our expertise, we aim to provide personalized and impactful solutions that drive success, growth, and fulfillment in both academic and professional settings.</p>
-            </div>
-            <div class="image-right">
-                <img src="images/about1.jpg" alt="Our Mission">
-            </div>
-        </section>
 
-        <!-- Second Section -->
-        <section class="section" id="section2">
-            <div class="text">
-                <h2>Our Vision</h2>
-                <p>We aim to be the leading provider of high-quality writing services, helping individuals and organizations excel in their respective fields. Our vision is to empower clients with the tools and resources they need to succeed, regardless of the challenges they face. By staying ahead of industry trends and continuously improving our services, we aspire to set new standards for excellence in the writing and content development industry. We envision a future where every student, professional, and business can access the support they need to realize their full potential.</p>
-            </div>
-            <div class="image-left">
-                <img src="images/about2.jpeg" alt="Our Vision">
-            </div>
-        </section>
+        <!-- First Section: Our Mission -->
+<section class="section" id="section1">
+    <div class="image-right">
+        <img src="images/about1.jpg" alt="Our Mission">
+    </div>
+    <div class="text">
+        <h2>Our Mission</h2>
+        <p>We strive to provide outstanding academic and professional writing services to assist our clients in achieving their educational and career goals. Our mission is rooted in a commitment to excellence, ensuring that every piece of work we produce is of the highest quality. We believe in fostering a strong partnership with our clients, working closely with them to understand their unique needs and requirements. By leveraging our expertise, we aim to provide personalized and impactful solutions that drive success, growth, and fulfillment in both academic and professional settings.</p>
+    </div>
+</section>
 
-        <!-- Third Section -->
-        <section class="section" id="section3">
-            <div class="text">
-                <h2>Our Values</h2>
+<!-- Second Section: Our Vision -->
+<section class="section" id="section2">
+    <div class="image-left">
+        <img src="images/about2.jpeg" alt="Our Vision">
+    </div>
+    <div class="text">
+        <h2>Our Vision</h2>
+        <p>We aim to be the leading provider of high-quality writing services, helping individuals and organizations excel in their respective fields. Our vision is to empower clients with the tools and resources they need to succeed, regardless of the challenges they face. By staying ahead of industry trends and continuously improving our services, we aspire to set new standards for excellence in the writing and content development industry. We envision a future where every student, professional, and business can access the support they need to realize their full potential.</p>
+    </div>
+</section>
+
+
+<!-- Second Section: Our Vision -->
+<section class="section" id="section3">
+    <div class="image-right">
+           <img src="images/typ.jpeg" alt="Our Values">
+    </div>
+    <div class="text">
+      <h2>Our Values</h2>
                 <p>Integrity, excellence, and dedication are the core values that guide our operations and service delivery. We are committed to maintaining the highest standards of honesty and professionalism in every interaction. Our team believes in the importance of delivering value through our work, ensuring that our clients receive the best possible service at every step. We are dedicated to continuous learning, growth, and development, both individually and collectively, to better serve our clients and make a meaningful difference in their academic and professional journeys.</p>
-            </div>
-            <div class="image-right">
-                <img src="images/typ.jpeg" alt="Our Values">
-            </div>
-        </section>
+    </div>
+</section>
 
-        <!-- Fourth Section -->
-        <section class="section" id="section4">
-            <div class="text">
-                <h2>Our Team</h2>
+                <!-- First Section: Our Mission -->
+<section class="section" id="section4">
+    <div class="image-left">
+      <img src="images/s.jpeg" alt="Our Team">
+    </div>
+    <div class="text">
+        <h2>Our Team</h2>
                 <p>Our team consists of experienced writers, editors, and support staff who are committed to delivering the best possible results. Each member of our team brings a unique set of skills and expertise to the table, allowing us to provide comprehensive and specialized support to our clients. We value collaboration, innovation, and a shared commitment to excellence, which drives us to continually enhance the quality of our services. Our team members are not just professionals; they are passionate individuals who genuinely care about the success and satisfaction of our clients.</p>
-            </div>
-            <div class="image-left">
-                <img src="images/s.jpeg" alt="Our Team">
-            </div>
-        </section>
+    </div>
+</section>
+
+
     </main>
 
     <a href="https://api.whatsapp.com/send/?phone=442032893891&text&type=phone_number&app_absent=0" class="whatsapp-float">
