--- a/About us.html
+++ b/About us.html
@@ -367,7 +367,7 @@
 
 /* Section Styles */
 
-   /* Section Styles */
+        /* Section Styles */
         .section {
             display: flex;
             padding: 50px;
@@ -375,13 +375,11 @@
             max-width: 1200px;
             margin: auto;
             transition: all 0.3s ease;
-            opacity: 0;
-            transform: translateX(100%);
+            /* Removed opacity and transform to ensure visibility */
         }
 
         .section:nth-child(even) {
             flex-direction: row-reverse;
-            transform: translateX(-100%);
         }
 
         .text,
@@ -405,15 +403,18 @@
             text-align: justify;
         }
 
-        .image-left {
+        .image-left,
+        .image-right {
             display: flex;
-            justify-content: flex-end;
+            justify-content: center;
+            align-items: center;
+            padding: 40px;
         }
 
         .image-left img,
         .image-right img {
             max-width: 100%;
-            height: 300px;
+            height: auto; /* Ensures images scale properly */
             object-fit: cover;
             border-radius: 12px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -424,7 +425,23 @@
         .image-left img:hover {
             transform: scale(1.05);
         }
-       
+
+
+         /* Animation Classes */
+        .section.animate-left {
+            opacity: 0;
+            transform: translateX(-100%);
+        }
+
+        .section.animate-right {
+            opacity: 0;
+            transform: translateX(100%);
+        }
+
+        .section.visible {
+            opacity: 1;
+            transform: translateX(0);
+        }
 
         /* WhatsApp Button */
         .whatsapp-float {
@@ -575,7 +592,8 @@
     height: auto;
     border-radius: 8px;
 }
-Explanation of Changes:
+
+            
 
     /* Adjust Hero Section */
     .about-hero h1 {
