--- a/index.html
+++ b/index.html
@@ -1048,6 +1048,11 @@
     .pricing-box ul li {
         font-size: 14px; /* Adjust list font size */
     }
+
+              .footer-logo {
+        display: block;
+        margin: 0 auto;
+    }
   
 
   
