--- a/About us.html
+++ b/About us.html
@@ -164,17 +164,14 @@
         }
 
         /* Close Menu Button Styles */
+          /* Close Menu Button Styles */
         .close-menu {
             z-index: 3005;
             position: absolute;
             top: 20px;
             right: 20px;
-            background: none;
-            border: none;
-            color: white;
-            font-size: 2rem;
-            cursor: pointer;
         }
+          
 
         /* Hamburger Menu Styles */
         .hamburger {
